[Tags] Added tag 'reviews'

--- a/_posts/personal/course-reviews/2022-01-01-math1152.md
+++ b/_posts/personal/course-reviews/2022-01-01-math1152.md
@@ -2,7 +2,7 @@
 layout: post
 title: MATH1152 - Introductory Algebra 1
 description: A course review on Honors Math Linear Algebra 1
-categories: [university, school, math, review]
+categories: [university, school, math, reviews, carletonU]
 ---
 
 **TLDR:**
