--- a/_posts/personal/course-reviews/2022-01-01-phys1001.md
+++ b/_posts/personal/course-reviews/2022-01-01-phys1001.md
@@ -2,7 +2,7 @@
 layout: post
 title: PHYS1001 - A Review on Foundations of Physics 1
 description: A course review on PHYS1001
-categories: [university, school, physics, review]
+categories: [university, school, physics, reviews, carletonU]
 ---
 
 **TLDR:**
@@ -18,7 +18,9 @@ categories: [university, school, physics, review]
                                                                                 
 **Lab Supervisor:**  Igor Ivanovic                                                 
                                                                                 
-**Course Delivery:**  Hybrid                                                       
+**Course Delivery:**  
+* Hybrid lectures (i.e. can join on Zoom if you cannot come)                                                      
+* Tutorials and labs are in-person
                                                                                 
 **Class Size:**  Less than 50 students                                             
                                                                                 
@@ -26,8 +28,10 @@ categories: [university, school, physics, review]
 Newtonian Physics) covering topics such as kinematics, dynamics, energy, and oscillatory motion.
 This is a calculus-based course is intended for students who intend to take further courses in Physics.
 
+---
+
 ![Manga Guide to Physics](https://images-na.ssl-images-amazon.com/images/I/91t60oIC+YS.jpg)
-<!-- if Amazon image link broken, use "assets/math-physics/manga-guide-physics-example.jpg"-->
+<!-- if Amazon image link broken, use "assets/math-physics/manga/manga-guide-physics-example.jpg"-->
 <div class = "caption">A snippet from the Manga Guide to Physics</div>     
 
 
@@ -56,6 +60,8 @@ Calculus is an important subject to understand to be able to derive all sorts of
 and describe concisely the phenomena around us. So if you plan to take this course, it would be a good idea to be comfortable with math. You do not need 
 to be an expert in calculus but just be familiar with the basics.
 
+![An XKCD Comic on the purity of differnet fields/major](https://imgs.xkcd.com/comics/purity.png)
+
 The lectures spend a lot of time deriving the equations which can be very confusing at times to follow along. Do not fret because you will not be 
 expected to derive most of the formulas. But it's good to be exposed to the derivations and have a general idea of how the derivations work. There are times 
 when you do need to do some of the derivations that can be quite complicated but you have the course notes and textbook to guide you through the derivations. However, you must 
@@ -64,7 +70,7 @@ You may have already been exposed to this in Highschool where you needed to anal
 When I took Highschool Physics over 6 years ago (I'm quite old), 
 I recall learning the relationship between position velocity, and acceleration including how integrals fit into the puzzle (except we were not expected to be able to do integrals).
 
-![Two science students solving angular velocity while riding a Merry-Go-Around](../assets/math-physics/physics-manga-1.png)
+![Two science students solving angular velocity while riding a Merry-Go-Around](../assets/math-physics/manga/physics-manga-1.png)
 <div class = "caption">A snippet from a manga about two STEM students trying to prove they love each other</div>     
 
 
@@ -79,7 +85,7 @@ easier than the ones I've done before so it's quite embarrassing how many hours 
 But I am glad to have taken PHYS1001 because I feel more knowledgeable in the subject despite being weaker at solving physics problems compared to before. The difficulty with Physics problem is actually knowing how to start the 
 question. There are a lot more things to consider when solving Physics compared to other subjects I've taken and I often find it hard to understand what the problem is stating.
 
-![Girl lost in how to solve the problem](../assets/math-physics/math-confused.png)
+![Girl lost in how to solve the problem](../assets/math-physics/manga/math-confused.png)
 <div class = "caption">A snippet from a manga where Hina (the protagonist) being completely lost solving some math problems</div> 
 
 
@@ -125,3 +131,24 @@ of the same difficulty as the homework which was unrealistic. The homework takes
 Overall, I thought the professors, TA and lab supervisor has done a good job and 
 the course went better than I thought after I felt overwhelmed with the courseload. 
 Though taking physics and chemistry made me realize, sciences takes a lot of time commitment due to the fact there is a lab component.
+
+---
+
+## FAQ
+
+**Do I need webassign?**
+* If it's not on the syllabus, ask the professor. When I took the course, webassign was not needed
+* If you bought the textbook with webassign and cannot refund the item, open a ticket with Cengage to see if you can at least get the digital textbook - That is what I did
+
+**Do I need lab coats?**
+* No you do not need a lab count for this course. The course does not deal with any chemicals.
+
+**Do I need to buy the lab notebook?**
+* I bought it since it was in the course instruction but we never used it. Ask the lab supervisor if you need it.
+
+**How much Calculus is used in the Course?**
+* Simple derivatives and integration knowledge is required to understand the lectures and assignments. 
+* In addition, to derive the formula for the uncertainty of 
+various calculations, partial derivatives are required (it's not too difficult to do but it's a huge pain to derive the uncertainty so it's sometimes counted as bonus marks). 
+* If you are not familiar with integration, you can learn on your own time while taking the course since 
+you only need to know the basics.
