[Rough Draft] Review on Calculus and Analysis 1

--- a/_posts/personal/course-reviews/2022-01-01-math1152.md
+++ b/_posts/personal/course-reviews/2022-01-01-math1152.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: review
 title: MATH1152 - Introductory Algebra 1
 description: A course review on Honors Math Linear Algebra 1
 categories: [university, school, math, reviews, carletonU]
@@ -30,6 +30,8 @@ It's a more proof and theory based linear algebra course.
 
 
 **Review:**
+
+**Note: The course was taken in 2021 during the pandemic so my experiences may be unique**
 
 Although the lectures are asynchronous due to the pandemic (i.e. prerecorded lectures uploaded to youtube), I found myself enjoying the lectures a lot. 
 I do not know what makes it appealing to watch his lectures but the way he expresses things makes it enjoyable. I have taken a 
@@ -110,6 +112,11 @@ were to write their solutions on paper, scan, and upload within the time limit.
 ![A snippet of Fodden's lecture intro](../assets/math-physics/fodden-intro.png)
 <div class = "caption">A snippet of Fodden's lecture intro. Taken without permission. Please open a git issue to request the image to be taken down.</div>
 
-While I cannot share with you the lecture videos, I could share with you [Yully Billig's lectures on Linear Algebra](https://www.youtube.com/watch?v=qXd2gFKdoW0&list=PLu6jbin1VpDBUXUMi7zPS4A5D3iNTnzZF) which covers both MATH1152 and MATH2152 materials. I'll probably be watching some of his videos since I 
-am going to be taking MATH2100 before taking MATH2152 (by taking MATH2107 in the summer). Perhaps I'll take MATH2152 if the quizzes have a 24 hour window like how MATH1052 did. 
+While I cannot share with you the lecture videos, I could share with you [Yully Billig's lectures on Linear Algebra](https://www.youtube.com/watch?v=qXd2gFKdoW0&list=PLu6jbin1VpDBUXUMi7zPS4A5D3iNTnzZF) 
+which covers both MATH1152 and MATH2152 materials. I'll probably be watching some of his videos since I am going to be taking MATH2100 before taking MATH2152 (by taking MATH2107 in the summer). 
+Perhaps I'll take MATH2152 if the quizzes have a 24 hour window like how MATH1052 did. 
 
+For those of you in Computer Science or familiar with Computer Science theory will be in treat of some bonus lectures about Error Correcting Codes and applications to Graph theory with the little amount of linear algebra 
+taught in this course. It was indeed a great early Christmas Present as I was reminded that modulo 2 addition is equivalent to xor operation in binary which I completely forgot. Another neat thing I learned from those bonus 
+lectures is the fact that the result of multiplying an adjacency matrix by itself n times results in the number of path of length n between two verticies. This may have been something mentioned in lecture before but this was 
+very shocking to me as I didn't know about this. Anyhow, these are just bonus lectures and are not important to the course assessment but it's a fun lecture.
