--- a/_posts/personal/course-reviews/2022-01-01-phys1001.md
+++ b/_posts/personal/course-reviews/2022-01-01-phys1001.md
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: review
 title: PHYS1001 - A Review on Foundations of Physics 1
 description: A course review on PHYS1001
 categories: [university, school, physics, reviews, carletonU]
@@ -36,6 +36,9 @@ This is a calculus-based course is intended for students who intend to take furt
 
 
 **Review:**
+
+**Note: The course was taken in 2021 during the pandemic so my experiences may be unique**
+
 Jesse Heilman is an enthusiastic professor who loves Physics. The course is taught in a manner that attempts 
 to teach Physics from a first principle perspective as much as possible. However, with the lack of demonstrations 
 especially due to the difficulty of logistics during the pandemic, the course could not achieve the level of 
