[Edit] Referenced the wrong image

--- a/_posts/personal/course-reviews/2022-01-01-math1052.md
+++ b/_posts/personal/course-reviews/2022-01-01-math1052.md
@@ -80,7 +80,7 @@ Anyhow, the convergence proof is a lot harder than your typical convergence proo
 how little I learned in my regular calculus course which is good. That is the reason why I went back to University, to relearn and be exposed to materials that are not covered in a regular math course in hopes that I can one day 
 be decent in Math for once (For context, I did very poorly in my Math courses when I first did my undergrad which is why my CGPA was never good despite doing well in most of my other courses I majored in).
 
-![A snippet from a manga of how tedious it would be to expand a 9th power polynomial](../assets/math-physics/manga/golden-math-3.jpg)
+![A snippet from a manga of a person contemplating of pulling random math theories that may not be true](../assets/math-physics/manga/golden-math-5.jpg)
 <div class = "caption">From the manga Mathematics Golden which I have not read</div>   
 
 
