[Edit] Clarify that it wasn't a big focus in my previous experience

--- a/_posts/personal/course-reviews/2022-01-01-math1052.md
+++ b/_posts/personal/course-reviews/2022-01-01-math1052.md
@@ -71,7 +71,7 @@ at CarletonU since I do not see sequences being mentioned in the course descript
 Although I did learn about sequences and series briefly in Calculus before, it was not in-depth compared to what MATH1052 covers. I did not recall ever learning about finding the limits of sequences, the Bolzano-Weierstrass Theorem, 
 what a Cauchy or a subsequence is and the theorems associated with them such as the fact that if a sequence converges to some number L then the subsequence converges to the same number. Since this is a calculus course, 
 the subject of continuity is greatly discussed in the course. The course goes over continuity for not only functions but also for sequences. I do recall learning about the Squeeze theorem and the Intermediate Value 
-Theorem but I never needed to use them (aside from the Squeeze theorem which I think was used for a test question). Anyhow the course goes over more in-depth about what it means for a function to be continuous and ties in 
+Theorem in my previous experience with calculus but I never needed to use them (aside from the Squeeze theorem which I think was used for a test question). Anyhow the course goes over more in-depth about what it means for a function to be continuous and ties in 
 with sequences and how to prove whether a function is continuous using delta-epsilon proofs. I do not recall this being the focus of regular calculus but it was briefly taught and tested. But in this course, you'll 
 find yourself doing a lot of proofs to show whether a function or a sequence converges or diverges using delta-epsilon or some other definitions using other symbols such as using alpha or N depending on if you are proving 
 limits of a sequence or a function or whether the limit "converge" to infinity (it's weird since I learned it as diverges to infinity). This is where the course trips me off because a lot of these definitions used to prove 
