[Edit] Remove quote as it was misunderstood

--- a/_posts/programming/2022-02-06-pam-aware.md
+++ b/_posts/programming/2022-02-06-pam-aware.md
@@ -20,11 +20,7 @@ As stated in Linux PAM documentation, developers do not need to know how the aut
 That is the beauty of PAM. But how do you know what applications are "PAM-Aware" (a term to refer 
 to whether the application utilizes PAM for authentication)? According to [TechMint](https://www.tecmint.com/configure-pam-in-centos-ubuntu-linux/), 
 one would just need to check whether or not a program is linked to `libpam.so` (the dynamic library for the PAM library). 
-This would indeed be true for Linux, at least that is the intention of how Linux PAM works:
-
-> This is accomplished by providing a documented library of functions that an application may use for all forms of user authentication management. 
-> This library dynamically loads locally configured authentication modules that actually perform the authentication tasks. 
-> [Linux PAM - 1.1 Description](http://www.linux-pam.org/Linux-PAM-html/adg-introduction-description.html)
+This would indeed be true for Linux, or at least that is how it should work nowdays.
 
 To find a list of "PAM-aware" applications, you could check what PAM policies are packaged in your distribution under `/etc/pam.d`. However, 
 the best method on Linux is to use `ldd` to see if the application dynamically links to the PAM library as stated previously. 
