--- a/_posts/programming/qnx/2022-04-10-qnx-aps.md
+++ b/_posts/programming/qnx/2022-04-10-qnx-aps.md
@@ -8,6 +8,20 @@ categories: [programming, c/c++, aps, qnx]
 In preparation to my presentation on QNX APS (Adaptive Partitioning System), I decided to write 
 a blog that goes through what partitions are, how to control resources in QNX, and what APS are.
 
+<details>
+<summary>Table of Contents</summary>
+<a href = "#rlimit">Constraining a Single Process</a><br/>
+<a href = "#cgroups">Constraining Group of Processes</a><br/>
+<a href = "#"></a><br/>
+
+</details>
+
+<a name = "rlimit"/>
+
+---
+## Constraining A Single Process
+---
+
 As resources are limited, there is a need for a way to control how much resources a process can consume. 
 Traditionally, sysadmin would set limits to users and processes. This is probably noticeable on lab machines in universities, 
 machines that are shared among many students to prevent any malicious user or process from denying resources to others. This 
@@ -44,6 +58,12 @@ consumption. There are other function calls (non-POSIX) such as `prlimit` to set
 view resource consumption on both QNX and Linux. In fact, `rlimit` function calls are 
 just wrappers to `prlimit()` according to the documentation ([QNX](http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.neutrino.lib_ref/topic/s/setrlimit.html) and [Linux](https://man7.org/linux/man-pages/man2/prlimit.2.html).
 
+<a name = "cgroups"/>
+
+---
+## Constraining A Group of Processes
+---
+
 However, `rlimit` only applies to individual users (for Linux) and applications. That is where 
 cgroups and partitions come to play. `cgroups` (Control Groups) is a feature on the Linux kernel 
 that allows admins to allocate resources to a group/partition of tasks and are much more complex 
@@ -57,19 +77,66 @@ resources (i.e. processing time) that is isolated from other partitions ([Glossa
 Essentially you can divide CPU processing time in virtual objects called partitions where processes can be executed in and be guaranteed to have the CPU time specified in their configuration.
 
 ![An image of 3 partitions being allocated 50%, 20% and 30% of resources respectively](http://www.qnx.com/developers/docs/7.1/com.qnx.doc.neutrino.sys_arch/images/static_partitions.png)
+<p class = "caption">An excerpt from QNX Documentation</p>
 
-As stated earlier, the ability to constrain resources into partitions is to avoid any "single point of failure" whereby a malicious process consumes the entire system resource. Partitions 
+
+As stated earlier, the ability to constrain resources into partitions is to avoid any "single point of failure" whereby a malicious process consumes the entire system resource and starves all other threads 
+(i.e. fork bombs or a DDOS attack). Partitions 
 allows processes in other partitions to receive their allocated share of system resources. This is very crucial especially for projects that require high availability and reliability (there's a difference 
-between the two terms but I won't get into it). 
+between the two terms but I won't get into it). Another great use case for APS is the abvility to recover from a locked system. To illustrate, you can designate 10% of the CPU to a shell so that whenever 
+disaster strikes, you will still have access to the shell to perform any data recovery, cleanup, and freeing the system from the malicious process/thread. 
+
+However, what happens to the remaining CPU time for partitions that don't utilize their entire allocated CPU time (referred as CPU budget or time budget) such as in the case where you allocate 10% of the 
+CPU to a recovery shell? The recovery shell isn't going to be needed so it would be a waste for the CPU to not be used.
+That is where the term "adaptive" comes into the chat. Static partitions cannot share resources and unable to adapt at runtime but adaptive partitions can. QNX offers the ability for partitions to share 
+their left over budget to other partitions to utilize and can be configured at runtime if you decide the current configuration is not desirable.
 
 <details>
-<summary>A Terrible Use Case</summary>
-A very simple example I could think of (I am not a customer of QNX nor involved in the design and engineering of the product so I would not know the use case of QNX), 
-would be to have a partition where all the time sensitive drivers and sensors be placed in one or more partitions while placing other more unimportant processes such as bluetooth and multimedia related processes in another partition. 
-This would ensure that the time sensitive drivers will always be executing even if something goes haywire in the interactive applications. Sorry if the examples are bad, I do not know the specific use case well enough.
+<summary>QNX APS Use Case - Fictious Medical Ventilator</summary>
+<hr/>
+Michael Brown from QNX <a href ="https://devblog.blackberry.com/en/2021/02/thread-scheduling-and-time-partitioning-in-a-qnx-neutrino-rtos-system"> has written a blog illustrating a use case for APS through the 
+example of a fictious medical ventilator</a> that you should check out.
+<hr/>
 </details>
 
+<a name = "aps"/>
 
+---
+## APS - Adapative Partitioning System
+---
+
+<details>
+<summary>Initial Setup</summary>
+<hr/>
+To utilize APS, you need to ensure that the APS module is loaded into the image. This requires changing your 
+buildfile to include <code class = "highlight">[module=aps]</code> at the beginning of the line where you start `procnto-smp-instr`. You can find more details in 
+the <a href = "http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.adaptivepartitioning.userguide/topic/quickstart_Base_.html">Quickstart: Adaptive Partitioning Thread Scheduler</a> on the QNX documentation.
+Run <code class = "highlight">aps show</a> to see if APS is running on the system.
+
+**Example:** APS not running on the system
+<code class = "highlight">
+# aps show
+Error: APS scheduler not running
+</code>
+<hr/>
+</details>
+
+When the system boots up, a partition `System` is automatically created for you. Any process you start from the shell will be assigned to the `System` partition (assuming you have not 
+played around with APS on the image buildfile) because by default, child processes/threads belong to the parent's partition by default.
+
+```
+# aps show
+
+
+* by default child processes/threads go into parent's partition by default
+* scheduling works as normal (highest priority thread gets the CPU time)
+
+ You can use adaptive partitioning to make it easier to debug an embedded system by providing emergency access to it:
+
+    during development — create a partition and start io-pkt and qconn in it. Then, if a runaway process ties up the system, you can use the IDE to debug and query the system.
+    during deployment — create a partition and start io-pkt and inetd in it. If you encounter a problem, you can telnet into the system.
+
+In either case, if you don't need to use this partition, the thread scheduler allocates its budget among the other partitions. This provides you with emergency access to the system without compromising performance. 
 
 * show bankruptcy policies
 * talk about security policies
@@ -77,6 +144,7 @@ This would ensure that the time sensitive drivers will always be executing even 
 * check `/proc/<PID>/limits
 * check `schedctl`
 * https://web.archive.org/web/20200223060354/http://www.kalinskyassociates.com/Wpaper3.html - for use cases
+* partition inheritance
 
 ## Resources:
 * [Redhat - Resource Management](https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/6/html/resource_management_guide/ch01)
