[edit] APS child proc

--- a/_posts/programming/qnx/2022-04-10-qnx-aps.md
+++ b/_posts/programming/qnx/2022-04-10-qnx-aps.md
@@ -124,6 +124,10 @@ Error: APS scheduler not running
 When the system boots up, a partition `System` is automatically created for you. Any process you start from the shell will be assigned to the `System` partition (assuming you have not 
 played around with APS on the image buildfile) because by default, child processes/threads belong to the parent's partition by default.
 
+<code class = "highlight">
+# sleep 10 & #run a process that sleeps for 10 seconds
+# pidin -F "%N %I %e %H" | grep -E "pid-tid|ksh|sleep"
+
 ```
 # aps show
 
