[progress] Add Partition Creation Content

--- a/_posts/programming/qnx/2022-04-10-qnx-aps.md
+++ b/_posts/programming/qnx/2022-04-10-qnx-aps.md
@@ -5,14 +5,27 @@ description: A look into QNX APS feature
 categories: [programming, c/c++, aps, qnx]
 ---
 
-In preparation to my presentation on QNX APS (Adaptive Partitioning System), I decided to write 
-a blog that goes through what partitions are, how to control resources in QNX, and what APS are.
+In preparation to my presentation on QNX APS (Adaptive Partitioning Scheduler), I decided to write 
+a blog that goes through what partitions are, how to control resources in QNX, and what APS are. 
+Though a lot of the information is just based on the QNX documentation all put into one page but 
+with examples and referencing other publically available resources (i.e. foundary27, papers, blogs, and 
+what I found from playing around with APS). This page will not go through how to use APS through the 
+Momentics IDE nor will it cover the various C API's to configure the partition. There's already a lot 
+to cover, so the C API's will be covered in another blog post (provided I can muster enough willpower 
+to finish my research and code examples before my 30-day QNX trial license expires i.e. the University 
+rejected my application for a QNX license and QNX has not gotten back to me about my request for an 
+education license - though I think there was a glitch since the website was behaving weirdly when 
+I request it so they may not have received my request).
 
-<details>
-<summary>Table of Contents</summary>
-<a href = "#rlimit">Constraining a Single Process</a><br/>
-<a href = "#cgroups">Constraining Group of Processes</a><br/>
-<a href = "#"></a><br/>
+<details class = "note-body">
+<summary class = "note">Table of Contents</summary>
+<ol>
+<li><a href = "#rlimit">Constraining a Single Process</a></li>
+<li><a href = "#cgroups">Constraining Group of Processes</a></li>
+<li><a href = "#child-1">Partition of a Child Process</a></li>
+<li><a href = "#create-partition">Creating a Partition</a></li>
+<li><a href = "#aps-action">APS In Action</a></li>
+</ol>
 
 </details>
 
@@ -56,7 +69,7 @@ from fork bombing my machine.
 There are POSIX Calls such as `getrlimit` and `setrlimit` to display or set resource 
 consumption. There are other function calls (non-POSIX) such as `prlimit` to set and 
 view resource consumption on both QNX and Linux. In fact, `rlimit` function calls are 
-just wrappers to `prlimit()` according to the documentation ([QNX](http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.neutrino.lib_ref/topic/s/setrlimit.html) and [Linux](https://man7.org/linux/man-pages/man2/prlimit.2.html).
+just wrappers to `prlimit()` according to the documentation ([QNX](http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.neutrino.lib_ref/topic/s/setrlimit.html) and [Linux](https://man7.org/linux/man-pages/man2/prlimit.2.html)).
 
 <a name = "cgroups"/>
 
@@ -64,7 +77,8 @@ just wrappers to `prlimit()` according to the documentation ([QNX](http://www.qn
 ## Constraining A Group of Processes
 ---
 
-However, `rlimit` only applies to individual users (for Linux) and applications. That is where 
+However, `rlimit` resource restriction only applies to each applications. It is not flexible and is unable 
+to restrict processes as a collective group. That is where 
 cgroups and partitions come to play. `cgroups` (Control Groups) is a feature on the Linux kernel 
 that allows admins to allocate resources to a group/partition of tasks and are much more complex 
 compared to what QNX offers where only the CPU resources can be controlled. As this is an article 
@@ -91,8 +105,8 @@ CPU to a recovery shell? The recovery shell isn't going to be needed so it would
 That is where the term "adaptive" comes into the chat. Static partitions cannot share resources and unable to adapt at runtime but adaptive partitions can. QNX offers the ability for partitions to share 
 their left over budget to other partitions to utilize and can be configured at runtime if you decide the current configuration is not desirable.
 
-<details>
-<summary>QNX APS Use Case - Fictious Medical Ventilator</summary>
+<details class = "note-body">
+<summary class = "note">QNX APS Use Case - Fictious Medical Ventilator</summary>
 <hr/>
 Michael Brown from QNX <a href ="https://devblog.blackberry.com/en/2021/02/thread-scheduling-and-time-partitioning-in-a-qnx-neutrino-rtos-system"> has written a blog illustrating a use case for APS through the 
 example of a fictious medical ventilator</a> that you should check out.
@@ -102,18 +116,18 @@ example of a fictious medical ventilator</a> that you should check out.
 <a name = "aps"/>
 
 ---
-## APS - Adapative Partitioning System
+## APS - Adapative Partitioning Scheduler 
 ---
 
-<details>
-<summary>Initial Setup</summary>
+<details class = "note-body">
+<summary class = "note">Initial Setup</summary>
 <hr/>
 To utilize APS, you need to ensure that the APS module is loaded into the image. This requires changing your 
 buildfile to include <code class = "highlight">[module=aps]</code> at the beginning of the line where you start `procnto-smp-instr`. You can find more details in 
 the <a href = "http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.adaptivepartitioning.userguide/topic/quickstart_Base_.html">Quickstart: Adaptive Partitioning Thread Scheduler</a> on the QNX documentation.
-Run <code class = "highlight">aps show</a> to see if APS is running on the system.
+Run <code class = "highlight">aps show</code> to see if APS is running on the system.
 
-**Example:** APS not running on the system
+<b>Example:</b> APS not running on the system
 <code class = "highlight">
 # aps show
 Error: APS scheduler not running
@@ -121,16 +135,82 @@ Error: APS scheduler not running
 <hr/>
 </details>
 
+<a name = "aps-child-1"/>
+<br/>
+<u><b>Partition of a Child Process:</b></u>
+<br/>
+
 When the system boots up, a partition `System` is automatically created for you. Any process you start from the shell will be assigned to the `System` partition (assuming you have not 
 played around with APS on the image buildfile) because by default, child processes/threads belong to the parent's partition by default.
 
-<code class = "highlight">
-# sleep 10 & #run a process that sleeps for 10 seconds
-# pidin -F "%N %I %e %H" | grep -E "pid-tid|ksh|sleep"
-
 ```
 # aps show
+                    +-------- CPU Time --------+-- Critical Time --
+Partition name   id | Budget |   Max  |   Used | Budget |   Used
+--------------------+------------------------+---------------------
+System            0 | 100.0% | 100.0% |  0.02% |  200ms |   0.000ms
+--------------------+------------------------+---------------------
+Total               | 100.0% |        |  0.02% |
 
+
+# sleep 10 & #run a process that sleeps for 10 seconds
+[1] 671746
+# pidin -F "%N %I %e %H" | grep -E "pid-tid|ksh|sleep" 
+name               pid-tid        ppid ExtSched            
+proc/boot/ksh        159757-01       1 System              
+system/xbin/sleep    671746-01  159757 System 
+```
+
+<a name = "create-partition"/>
+<br/>
+<u><b>Create a Partition:</b></u>
+<br/>
+
+A partition has a few attributes you can set during creation but the only argument required is the CPU budget allocated 
+to the partition. All other parameters are optional and will be explained later.
+
+```
+aps create [-B critical_budget] -b budget [-m max_budget] [-P critical_priority] [partition_name] 
+```
+
+Each partitions are allocated a percentage of the CPU over some average time window (explained later).
+For instance, if we want to create a partition with a budget of 3.14% (i.e. decimal numbers are accepted), you would run the following command:
+```
+# aps create -b 3.14
+```
+
+The partition name 1 is not a very meaningful name so ensure you assign a meaningful name to the partition during creation 
+or else the partition id will be the name. For obvious reasons, partition's cannot start with a number (i.e. cannot tell apart from id if that was allowed).
+
+```
+aps create -b 3.14 pi
+```
+
+<a name = "aps-action"/>
+
+---
+### APS In Action
+---
+
+Enough babbling, let's see APS in action. Let's create 2 partitions: **drivers** and **recovery** where each partition is allocated a budget of 40% and 5% each respectively:
+```
+aps create -b 40 drivers 
+aps create -b 5 recovery
+```
+
+To start and execute a process onto each partition, we'll be using the `on` command:
+```
+on -Xaps=ksh ./ksh 
+on -Xaps=drivers ./gpu-nvidia &
+```
+
+<details class = "note-body"> 
+<summary class = "note">on utility</summary>
+<b>on</b> is a utility to execute a command. It's a useful utility to start a process on another remote node, with a CPU affinity, with a priority, or as a different user.
+In our case, we are using <b>on</b> because it's a simple way to start a process on a partition.
+
+<p><b>Read more at:</b> <a href = "http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.neutrino.utilities/topic/o/on.html">http://www.qnx.com/developers/docs/7.1/index.html#com.qnx.doc.neutrino.utilities/topic/o/on.html</a></p>
+</details>
 
 * by default child processes/threads go into parent's partition by default
 * scheduling works as normal (highest priority thread gets the CPU time)
@@ -148,7 +228,8 @@ In either case, if you don't need to use this partition, the thread scheduler al
 * check `/proc/<PID>/limits
 * check `schedctl`
 * https://web.archive.org/web/20200223060354/http://www.kalinskyassociates.com/Wpaper3.html - for use cases
-* partition inheritance
+* partition inheritance (caveat: server and client)
+* scheduling at thread level
 
 ## Resources:
 * [Redhat - Resource Management](https://access.redhat.com/documentation/en-us/red_hat_enterprise_linux/6/html/resource_management_guide/ch01)
@@ -159,3 +240,4 @@ In either case, if you don't need to use this partition, the thread scheduler al
 * [Bosch Brief Inustry Paper: Dissecting the QNX Adaptive Partitioning Scheduler](https://www.researchgate.net/profile/Dakshina-Dasari/publication/353094266_Brief_Industry_Paper_Dissecting_the_QNX_Adaptive_Partitioning_Scheduler/links/60f68bad9541032c6d50c824/Brief-Industry-Paper-Dissecting-the-QNX-Adaptive-Partitioning-Scheduler.pdf?origin=publication_detail)
 * [EETimes - Adaptive partitioning proposed to secure embedded designs](https://www.eetimes.com/adaptive-partitioning-proposed-to-secure-embedded-designs/#)
 * [QNX - Adaptive Partitioning](http://www.qnx.com/developers/docs/7.1/#com.qnx.doc.neutrino.sys_arch/topic/adaptive.html)
+
